Add test for sanitization pipeline